# Lama

./: .gitignore  .gitmodules  Lama.opam  Makefile
arend/: arend.yaml
arend/src/: ConstraintEntailment.ard  Context.ard  Eval.ard  Expr.ard  Memory.ard  Nub.ard  Scope.ard  Subst.ard  Telescope.ard  Type.ard  TypeEquality.ard  Typing.ard  Utils.ard
arend/src/test/: ConstraintEntailment.ard  Eval.ard
byterun/: .gitignore
regression/: Makefile  test080.lama  test081.lama
runtime/: Std.i  Std.ti  runtime.c
src/: Check.ml  Driver.ml  Language.ml  SM.ml  Solver.ml  Solver.noc.ml  Subst.ml  Typing.ml  dune
stdlib/: .gitignore  Array.lama  Collection.lama  List.lama  List.ti  Makefile  Ostap.lama
